--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+
+  "scripts": {
+
+    "build:css": "node_modules/.bin/postcss  styles.css -o ./dist/css/tailwind.css"
+
+  },
+
   "devDependencies": {
+
+    "autoprefixer": "^10.4.17",
+
+    "postcss": "^8.4.33",
+
     "tailwindcss": "^3.4.1"
+
   }
+
 }
+
